force-app/main/default/objects/Vendor_contact_categories__c/Vendor_contact_categories__c.object-meta.xml
<CustomObject>
    <label>Vendor contact category</label>
    <nameField>
        <label>Vendor contact categories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors contacts categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>