force-app/main/default/objects/Vendor_contact_categories__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor contact category</relationshipLabel>
    <relationshipName>vendor_contact_category</relationshipName>
    <type>Lookup</type>
</CustomField>