force-app/main/default/objects/Vendor_contact_categories__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Vendors contacts categories</relationshipLabel>
    <relationshipName>Vendors_contacts_categories</relationshipName>
    <type>Lookup</type>
</CustomField>