force-app/main/default/objects/Vendor_contact_categories__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vendors contacts categories</relationshipLabel>
    <relationshipName>Vendors_contacts_categories</relationshipName>
    <type>Lookup</type>
</CustomField>