force-app/main/default/objects/Vendor_contact_categories__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendors contacts categories (Vendor)</relationshipLabel>
    <relationshipName>Vendors_contacts_categories</relationshipName>
    <type>Lookup</type>
</CustomField>